# shulkerbox

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: test.yml
examples/: basic.rs
src/: lib.rs  virtual_fs.rs
src/datapack/: command.rs  function.rs  mod.rs  namespace.rs  tag.rs
src/datapack/command/: execute.rs  mod.rs
src/datapack/command/execute/: conditional.rs  mod.rs
src/util/: compile.rs  extendable_queue.rs  mod.rs  pack_format.rs
