[package]
name = "shulkerbox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["zip"]
zip = ["dep:zip"]

[dependencies]
getset = "0.1.2"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
zip = { version = "0.6.6", default-features = false, features = ["deflate", "time"], optional = true }
