[package]
name = "shulkerbox"
version = "0.1.0"
edition = "2021"

authors = ["Moritz Hölting <moritz@hoelting.dev>"]
description = "Crate for creating Minecraft datapacks in Rust"
repository = "https://github.com/moritz-hoelting/shulkerbox"
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["zip"]
serde = ["dep:serde"]
zip = ["dep:zip"]

[dependencies]
chksum-md5 = "0.0.0"
getset = "0.1.2"
serde = { version = "1.0.197", optional = true, features = ["derive"] }
serde_json = "1.0.114"
tracing = "0.1.40"
zip = { version = "1.1.1", default-features = false, features = ["deflate", "time"], optional = true }
