[package]
name = "shulkerbox"
version = "0.1.0"
edition = "2021"

authors = ["Moritz Hölting <moritz@hoelting.dev>"]
description = "Crate for creating Minecraft datapacks in Rust"
categories = ["compilers", "game-development"]
keywords = ["minecraft", "datapack", "mcfunction"]
repository = "https://github.com/moritz-hoelting/shulkerbox"
readme = "README.md"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["fs_access", "zip"]
fs_access = []
serde = ["dep:serde"]
zip = ["dep:zip"]

[dependencies]
chksum-md5 = "0.0.0"
getset = "0.1.2"
serde = { version = "1.0.197", optional = true, features = ["derive"] }
serde_json = "1.0.114"
tracing = "0.1.40"
zip = { version = "2.1.3", default-features = false, features = ["deflate", "time"], optional = true }

[dev-dependencies]
tempfile = "3.13.0"
